# AutoRAG

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/autorag-agent-lab/: .gitignore  LEDGER.md  SKILL.md  bench.py  designs.json
.claude/skills/autorag-agent-lab/prompts/: terse_l1.py
.claude/skills/autorag-puppeteer/: SKILL.md
.claude/skills/commit/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  search.sh  start-ollama.sh
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst
docs/internals/: architecture.rst  audio-pipeline-design.rst  extras-model.rst  frontend.rst  ollama-tuning.rst  packaging.rst
docs/reference/: agent.rst  audio-pipeline.rst  cli.rst  index.rst  persistence.rst  rag-pipeline.rst  sdk-facade.rst  server.rst  types-config.rst  viz.rst
docs/reference/audio-pipeline/: audio_source.rst  diarize.rst  whisper_runner.rst
docs/reference/persistence/: chroma_store.rst  db.rst  persistence.rst
docs/reference/rag-pipeline/: embed.rst  generate.rst  ingest.rst  retrieve.rst  store.rst
docs/reference/viz/: topic_cluster.rst  viz.rst
docs/user-guide/: cli.rst  document-rag.rst  server.rst  transcription.rst  visualization.rst  youtube.rst
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/hooks/: useDebouncedSearch.ts  useVizData.ts
frontend/src/state/: vizStore.ts
frontend/src/three/: Edges.tsx  HighlightGlow.tsx  PointsLayer.tsx  Scene.tsx  SearchHighlight.tsx  glowTexture.ts  layout.ts  palettes.ts
frontend/src/ui/: Legend.tsx  Overlays.tsx  Rail.tsx  SceneBoundary.tsx  SearchBox.tsx  SizeLegend.tsx  Tooltip.tsx  TopicList.tsx
src/autorag/: __init__.py  agent.py  api.py  audio_source.py  blocks.py  chroma_store.py  cli.py  config.py  core.py  db.py  diarize.py  embed.py  errors.py  generate.py  hierarchical_agent.py  ingest.py  orchestrator.py  persistence.py  providers.py  reimagined_agent.py  retrieve.py  schemas.py  signatures.py  store.py  tiered_agent.py  topic_cluster.py  topic_embed.py  types.py  viz.py  whisper_runner.py
src/autorag/static/: viz.html
src/autorag/static/viz/: index.html
src/autorag/static/viz/assets/: index-BRun0Vir.css  index-BY3bhMNw.js  index-DGJsl0mO.css  index-DHrrGjWG.js  index-DiHJufxw.css  index-dJhVflml.js
tests/: test_agent_helpers.py  test_agent_keep_warm.py  test_audio_source.py  test_blocks_formatter.py  test_chroma_store.py  test_cli_options.py  test_core_ingest_query.py  test_core_misc.py  test_core_persist_topics.py  test_core_transcribe_blocks_cache_miss.py  test_diarize_multispeaker.py  test_persistence_metadata.py  test_persistence_session_id.py  test_pipeline_e2e.py  test_session_id_derivation.py  test_smoke.py  test_transcribe_blocks_sqlite.py
