[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

[project]
name = "autorag"
version = "0.1.0"
description = "Automated Retrieval-Augmented Generation toolkit with CLI and API."
readme = "README.md"
requires-python = "==3.12"
license = { file = "LICENSE" }
authors = [{ name = "Kalen Cantrell" }]
dependencies = [
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "imageio-ffmpeg>=0.6.0",
    "pandas>=3.0.2",
    "openai-whisper>=1.0.0",
    "torch>=2.0",
    "pydantic_sqlite>=0.5.0",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai    = ["openai>=1.0"]
gemini    = ["google-generativeai>=0.5"]
all       = ["autorag[anthropic,openai,gemini]"]

[project.scripts]
autorag = "autorag.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.uv_build]
module-name = "autorag"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
