[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

[project]
name = "autorag"
version = "0.4.0"
description = "Audio→topics agent + document RAG toolkit. Importable SDK + CLI + HTTP API."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Kalen Cantrell" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.3",
]

[project.optional-dependencies]
audio = [
    "openai-whisper>=1.0.0",
    "torch>=2.0",
    "imageio-ffmpeg>=0.6.0",
]
# `[diarize]` builds on `[audio]`: pyannote needs the same torch + ffmpeg stack.
# Install both together: `pip install 'autorag[audio,diarize]'`.
diarize = [
    "pyannote.audio>=3.1",
    "huggingface-hub>=0.20",
]
rag = [
    "chromadb>=1.5.8",
    "umap-learn>=0.5",
    "scikit-learn>=1.4",
    "numpy>=1.24",
    "pydantic_sqlite>=0.5.0",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
youtube = [
    "yt-dlp>=2024.0",
]
all = [
    "autorag[audio,diarize,rag,server,youtube]",
]

[project.scripts]
autorag = "autorag.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv_build]
module-name = "autorag"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade (catches Optional[X] -> X | None, etc.)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN401",  # Any — needed for torch/whisper interop
    "B008",    # function calls in default args — conflicts with FastAPI Depends pattern
]
unfixable = [
    "F401",  # unused imports — don't auto-remove; files may be edited incrementally
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["autorag"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true
pretty = true
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "whisper",
    "whisper.*",
    "umap",
    "umap.*",
    "pydantic_sqlite",
    "pydantic_sqlite.*",
    "imageio_ffmpeg",
    "chromadb",
    "chromadb.*",
    "pyannote",
    "pyannote.*",
    "yt_dlp",
    "yt_dlp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["autorag.whisper_runner"]
disallow_any_generics = false

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
exclude = [".venv", "**/__pycache__", "**/.mypy_cache", "**/.ruff_cache"]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnusedParameter = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
# pydantic_sqlite has no stubs; we access its sqlite-utils handle (`_db`)
# directly because the wrapper exposes no public reader for table iteration.
reportPrivateUsage = "none"
